# BattleShapes

./: .gitignore  BattleShapes.sln  CMakeLists.txt  README.md  install.py  t& center) { -       this-texture = stdmove(texture);
BattleShapes/: BattleShapes.cpp  BattleShapes.vcxproj  BattleShapes.vcxproj.filters  CMakeLists.txt  attacking_shape.cpp  attacking_shape.h  bullet.cpp  bullet.h  collision.h  game_rect.cpp  game_rect.h  player.cpp  player.h  primitives.h  render.h  screen.cpp  screen.h  sdl_callbacks.cpp  sdl_callbacks.h  sdl_types.h
